--- a/inst/web/heatmap.ggplot2.html
+++ b/inst/web/heatmap.ggplot2.html
@@ -14,6 +14,18 @@
 <!--[if lt IE 9]>
   <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
+
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({
+    tex2jax: {
+      inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+      processEscapes: true
+    }
+  });
+</script>
+<script type="text/javascript"
+  src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
   </head>
 
   <body>
@@ -40,7 +52,7 @@
 <div class="row">
   <div class="span8">
     <h2>Usage</h2>
-    <pre><div>heatmap.ggplot2(eSet, brewer.pal.name&nbsp;=&nbsp;"RdBu", brewer.pal.rev&nbsp;=&nbsp;TRUE, brewer.numColors&nbsp;=&nbsp;11, col.legend.brewer&nbsp;=&nbsp;"", row.legend.brewer&nbsp;=&nbsp;"", col.clust&nbsp;=&nbsp;TRUE, row.clust&nbsp;=&nbsp;TRUE, col.lab&nbsp;=&nbsp;"", row.lab&nbsp;=&nbsp;"", heatmap.y.text&nbsp;=&nbsp;FALSE, heatmap.x.text&nbsp;=&nbsp;FALSE, heatmap.y.text.size&nbsp;=&nbsp;7, heatmap.x.text.size&nbsp;=&nbsp;6, heatmap.colorlegend.name&nbsp;=&nbsp;"val", title.text&nbsp;=&nbsp;"", col.legend.name&nbsp;=&nbsp;"", row.legend.name&nbsp;=&nbsp;"", row.scaling&nbsp;=&nbsp;"none", z.norm&nbsp;=&nbsp;FALSE, cuttree.col&nbsp;=&nbsp;0, cuttree.row&nbsp;=&nbsp;0, verbose&nbsp;=&nbsp;FALSE, grid.heights&nbsp;=&nbsp;NA, grid.widths&nbsp;=&nbsp;NA, show&nbsp;=&nbsp;FALSE)</div></pre>
+    <pre><div>heatmap.ggplot2(eSet, brewer.pal.name&nbsp;=&nbsp;"RdBu", brewer.pal.rev&nbsp;=&nbsp;TRUE, brewer.numColors&nbsp;=&nbsp;11, col.legend.brewer&nbsp;=&nbsp;"", row.legend.brewer&nbsp;=&nbsp;"", col.clust&nbsp;=&nbsp;TRUE, row.clust&nbsp;=&nbsp;TRUE, col.clust.hc&nbsp;=&nbsp;NA, row.clust.hc&nbsp;=&nbsp;NA, col.lab&nbsp;=&nbsp;"", row.lab&nbsp;=&nbsp;"", heatmap.y.text&nbsp;=&nbsp;FALSE, heatmap.x.text&nbsp;=&nbsp;FALSE, heatmap.y.text.size&nbsp;=&nbsp;7, heatmap.x.text.size&nbsp;=&nbsp;6, heatmap.colorlegend.name&nbsp;=&nbsp;"val", title.text&nbsp;=&nbsp;"", col.legend.name&nbsp;=&nbsp;"", row.legend.name&nbsp;=&nbsp;"", legend.lab.max.char&nbsp;=&nbsp;15, row.scaling&nbsp;=&nbsp;"none", z.norm&nbsp;=&nbsp;FALSE, cuttree.col&nbsp;=&nbsp;0, cuttree.row&nbsp;=&nbsp;0, verbose&nbsp;=&nbsp;FALSE, grid.heights&nbsp;=&nbsp;NA, grid.widths&nbsp;=&nbsp;NA, show&nbsp;=&nbsp;FALSE)</div></pre>
     
     <h2>Arguments</h2>
     <dl>
@@ -53,13 +65,17 @@
       <dt>brewer.numColors</dt>
       <dd>number of colors for heatmap palette default 11</dd>
       <dt>col.legend.brewer</dt>
-      <dd>color brewer for column labels</dd>
+      <dd>string vector of hexdecimal values for column labels, see example p3 and p4 for how to determine annotation labels and assigning colors</dd>
       <dt>row.legend.brewer</dt>
-      <dd>color brewer for row labels</dd>
+      <dd>string vector of hexdecimal values for row labels</dd>
       <dt>col.clust</dt>
       <dd>perform column-wise hierarchical clustering (TRUE or FALSE)</dd>
       <dt>row.clust</dt>
       <dd>perform row-wise hierarchical clustering (TRUE or FALSE)</dd>
+      <dt>col.clust.hc</dt>
+      <dd>hc object to be passed to as.dendrogram, available when col.clust = TRUE, default NA: hc.col = hcopt(stats::dist(t(x)), method="ward.D")</dd>
+      <dt>row.clust.hc</dt>
+      <dd>hc object to be passed to as.dendrogram, available when row.clust = TRUE, default NA: hc.row = hcopt(stats::as.dist(1-cor(t(x))),method="ward.D")</dd>
       <dt>col.lab</dt>
       <dd>column labels to include: subset of pData colnames character vector</dd>
       <dt>row.lab</dt>
@@ -80,6 +96,8 @@
       <dd>character vector for subset of col.lab to include in color legend</dd>
       <dt>row.legend.name</dt>
       <dd>character vector for subset of row.lab to include in color legend</dd>
+      <dt>legend.lab.max.char</dt>
+      <dd>number of characters limit for legend labels, default = 15</dd>
       <dt>row.scaling</dt>
       <dd>how should rows be scaled ("none", "quantile", "z-score.all", or "z-score.capped")</dd>
       <dt>z.norm</dt>
@@ -107,35 +125,103 @@ expression set object</p>
     </div>
     
     <h2 id="examples">Examples</h2>
-    <pre class="examples"><div class='input'>#Use example data #2, for data set information: ?eSet2
-data(eSet2)
+    <pre class="examples"><div class='input'>#Use example data #1, for data set information: ?eSet1
+data(eSet.brca.100)
+</div>
+<strong class='warning'>Warning message:
+data set ‘eSet.brca.100’ not found</strong>
+<div class='input'>eSet1&lt;-eSet.brca.100
+</div>
+<strong class='error'>Error in eval(expr, envir, enclos): object &#39;eSet.brca.100&#39; not found</strong>
+<div class='input'>eSet1&lt;-eSet1[1:10,1:25]
 
-#Most basic plot
-p1&lt;-heatmap.ggplot2(eSet2, col.clust = FALSE, row.clust = FALSE)
-
-#More advanced plot
-p2&lt;-heatmap.ggplot2(eSet=eSet2, col.clust = TRUE, row.clust = TRUE,
+p1&lt;-heatmap.ggplot2(eSet=eSet1, col.clust = TRUE, row.clust = TRUE,
+col.clust.hc = NA, row.clust.hc = NA,
 col.lab = c(&quot;HER2_status&quot;, &quot;ER_status&quot;, &quot;PR_status&quot;, &quot;TN_status&quot;), row.lab = &quot;&quot;,
-heatmap.y.text = FALSE, heatmap.x.text = FALSE,
+heatmap.y.text = TRUE, heatmap.x.text = TRUE,
 heatmap.colorlegend.name = &quot;RNASeq_expression&quot;,
 title.text = &quot;TCGA BRCA log2 RNA-seq expression, z-score row normalized&quot;,
 col.legend.name = c(&quot;HER2_status&quot;, &quot;ER_status&quot;, &quot;PR_status&quot;, &quot;TN_status&quot;),
 row.legend.name = &quot;&quot;,
 row.scaling = &quot;z-score.capped&quot;,
 z.norm = FALSE,
-cuttree.col = 4, cuttree.row = 6,
+cuttree.col = 4, cuttree.row = 3,
 verbose = FALSE, show = FALSE)
+grid.arrange(p1)
+</div>
+<p><img src='heatmap.ggplot2-6.png' alt='' width='540' height='400' /></p>
+<div class='input'>#ggsave(p1, file = &quot;p1.pdf&quot;)
 
-#Display and saving options
-print(p2) #to display in viewer if working in RStudio
+x&lt;-exprs(eSet1)
+x&lt;-x[rev(1:nrow(x)),]
+hc.row&lt;-hcopt(stats::as.dist(1-cor(t(x))),method=&quot;ward.D&quot;)
+hc.col &lt;- hcopt(stats::dist(t(x)), method=&quot;ward.D&quot;) #&#39;
+
+#Adding custom hclust object in col.clust.hc and row.clust.hc
+p2 &lt;- heatmap.ggplot2(eSet=eSet1, col.clust = TRUE, row.clust = TRUE,
+col.clust.hc = hc.col, row.clust.hc = hc.row,
+col.lab = c(&quot;HER2_status&quot;, &quot;ER_status&quot;, &quot;PR_status&quot;, &quot;TN_status&quot;), row.lab = &quot;&quot;,
+heatmap.y.text = TRUE, heatmap.x.text = TRUE,
+heatmap.colorlegend.name = &quot;RNASeq_expression&quot;,
+title.text = &quot;TCGA BRCA log2 RNA-seq expression, z-score row normalized&quot;,
+col.legend.name = c(&quot;HER2_status&quot;, &quot;ER_status&quot;, &quot;PR_status&quot;, &quot;TN_status&quot;),
+row.legend.name = &quot;&quot;,
+row.scaling = &quot;z-score.capped&quot;,
+z.norm = FALSE,
+cuttree.col = 4, cuttree.row = 3,
+verbose = FALSE, show = FALSE)
+grid.arrange(p2)
 </div>
-<p><img src='heatmap.ggplot2-2.png' alt='' width='540' height='400' /></p>
-<div class='input'>ggsave(p2, file = &quot;example_plot.pdf&quot;)
+<p><img src='heatmap.ggplot2-8.png' alt='' width='540' height='400' /></p>
+<div class='input'>##ggsave(p2, file = &quot;p2.pdf&quot;)
+
+#Saving plot in verbose format
+p3 &lt;- heatmap.ggplot2(eSet=eSet1, col.clust = TRUE, row.clust = TRUE,
+col.clust.hc = hc.col, row.clust.hc = hc.row,
+col.lab = c(&quot;HER2_status&quot;, &quot;ER_status&quot;, &quot;PR_status&quot;, &quot;TN_status&quot;), row.lab = &quot;&quot;,
+heatmap.y.text = TRUE, heatmap.x.text = TRUE,
+heatmap.colorlegend.name = &quot;RNASeq_expression&quot;,
+title.text = &quot;TCGA BRCA log2 RNA-seq expression, z-score row normalized&quot;,
+col.legend.name = c(&quot;HER2_status&quot;, &quot;ER_status&quot;, &quot;PR_status&quot;, &quot;TN_status&quot;),
+row.legend.name = &quot;&quot;,
+row.scaling = &quot;z-score.capped&quot;,
+z.norm = FALSE,
+cuttree.col = 4, cuttree.row = 3,
+verbose = TRUE, show = FALSE)
+grid.arrange(p3$heatmap)
 </div>
-<strong class='message'>Saving 7 x 7 in image</strong>
-<div class='input'>ggsave(p2, file = &quot;example_plot.jpg&quot;)
+<p><img src='heatmap.ggplot2-10.png' alt='' width='540' height='400' /></p>
+<div class='input'>##ggsave(p3, file = &quot;p3.pdf&quot;)
+
+meta.c.lab&lt;-levels(unique(p3$meta.c$id))
+meta.c.color.string&lt;-c(&quot;yellow&quot;, &quot;khaki3&quot;, &quot;gold&quot;, &quot;chocolate&quot;, &quot;darkred&quot;, &quot;cyan&quot;, &quot;white&quot;)
+meta.c.color&lt;-as.character(sapply(meta.c.color.string, to.hex))
+
+meta.r.lab&lt;-levels(unique(p3$meta.r$id))
+meta.r.color.string&lt;-c(&quot;pink&quot;, &quot;azure&quot;, &quot;green&quot;)
+meta.r.color&lt;-as.character(sapply(meta.r.color.string, to.hex))
+
+#Adding custom colors to column and row annotation labels
+p4&lt;-heatmap.ggplot2(eSet=eSet1,
+col.legend.brewer = meta.c.color,
+row.legend.brewer = meta.r.color,
+col.clust = TRUE, row.clust = TRUE,
+col.clust.hc = hc.col, row.clust.hc = hc.row,
+col.lab = c(&quot;HER2_status&quot;, &quot;ER_status&quot;, &quot;PR_status&quot;, &quot;TN_status&quot;), row.lab = &quot;cluster.row&quot;,
+heatmap.y.text = TRUE, heatmap.x.text = TRUE,
+heatmap.colorlegend.name = &quot;RNASeq_expression&quot;,
+title.text = &quot;TCGA BRCA log2 RNA-seq expression, z-score row normalized&quot;,
+col.legend.name = c(&quot;HER2_status&quot;, &quot;ER_status&quot;, &quot;PR_status&quot;, &quot;TN_status&quot;, &quot;cluster.col&quot;),
+row.legend.name = &quot;cluster.row&quot;,
+row.scaling = &quot;z-score.capped&quot;,
+z.norm = FALSE,
+cuttree.col = 4, cuttree.row = 3,
+verbose = FALSE, show = FALSE)
+grid.arrange(p4)
 </div>
-<strong class='message'>Saving 7 x 7 in image</strong></pre>
+<p><img src='heatmap.ggplot2-12.png' alt='' width='540' height='400' /></p>
+<div class='input'>#ggsave(p4, file = &quot;p4.pdf&quot;)
+</div></pre>
   </div>
   <div class="span4">
     <!-- <ul>
